--- a/node-module/Project/view/listuser.hbs
+++ b/node-module/Project/view/listuser.hbs
@@ -26,7 +26,9 @@
             
                 <td>{{this.username}}</td>
                 <td>{{this.email}}</td>
-                <td><a href="/delete/{{this._id}}"><i class="bi bi-trash-fill"></i></a></td>
+                <td><a href="/delete/{{this._id}}"><i class="bi bi-trash-fill"></i></a>
+                <a href="/edit/{{this._id}}"><i class="bi bi-pencil-square"></i></a>
+                </td>
                
             </tr>
             {{/each}}
