--- a/node-module/Project/view/login.hbs
+++ b/node-module/Project/view/login.hbs
@@ -21,10 +21,10 @@
 
                                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
 
-                                    <h1 style="color: green;">{{msg}}</h1>
-
+                                    <span style="color: red;">{{msg}}</span>
+                          
                                     <form method="post" action="/do_login" class="mx-1 mx-md-4">
-
+                    
                                      
                                         <input type="hidden" value="" name="id">
                                         <div class="d-flex flex-row align-items-center mb-4">
