--- a/node-module/Project/view/listuser.hbs
+++ b/node-module/Project/view/listuser.hbs
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
+    <a href="logout">Logout</a>
     <table class="table">
+
         <thead>
             <tr>
               
