--- a/node-module/Project/view/index.hbs
+++ b/node-module/Project/view/index.hbs
@@ -21,7 +21,7 @@
 
                                 <h1 style="color: green;">{{msg}}</h1>
 
-                                <form method="post" action="register" class="mx-1 mx-md-4">
+                                <form method="post"  enctype="multipart/form-data" action="register" class="mx-1 mx-md-4">
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -56,6 +56,17 @@
                                             I agree all statements in <a href="#!">Terms of service</a>
                                         </label>
                                     </div>
+
+                                   
+<div class="d-flex flex-row align-items-center mb-4">
+    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+    <div class="form-outline flex-fill mb-0">
+        <input required name="file" type="file" id="form3Example3c" class="form-control" />
+        <label class="form-label" for="form3Example3c">Upload image</label>
+    </div>
+</div>
+
+
 
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                                         <button type="submit" class="btn btn-primary btn-lg">Register</button>
